# astatine

./: .bumpversion.cfg  .pre-commit-config.yaml  CONTRIBUTING.rst  MANIFEST.in  README.rst  formate.toml  pyproject.toml  repo_helper.yml  requirements.txt  setup.cfg  setup.py  stubs.txt  tox.ini
.github/: actions_deploy_conda.sh
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: conda_ci.yml  octocheese.yml  python_ci_linux.yml
astatine/: __init__.py
doc-source/: Source.rst  conf.py  contributing.rst  index.rst  license.rst  requirements.txt
doc-source/_templates/sidebar/: navigation.html
doc-source/api/: astatine.rst
tests/: test_astatine.py
tests/test_astatine_/: test_get_constants_CONSTANTS_.yml  test_get_constants_complex_1_.yml  test_get_constants_dict_.yml  test_get_constants_list_.yml  test_get_constants_version_.yml
