[build-system]
requires = [ "whey",]
build-backend = "whey"

[project]
name = "astatine"
version = "0.0.0"
description = "Some handy helper functions for Python's AST module."
readme = "README.rst"
keywords = [ "ast",]
dynamic = [ "requires-python", "classifiers", "dependencies",]
[[project.authors]]
email = "dominic@davis-foster.co.uk"
name = "Dominic Davis-Foster"

[project.license]
file = "LICENSE"

[project.urls]
Homepage = "https://github.com/domdfcoding/astatine"
"Issue Tracker" = "https://github.com/domdfcoding/astatine/issues"
"Source Code" = "https://github.com/domdfcoding/astatine"
Documentation = "https://astatine.readthedocs.io/en/latest"

[tool.whey]
base-classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
python-versions = [ "3.6", "3.7", "3.8", "3.9",]
python-implementations = [ "CPython", "PyPy",]
platforms = [ "Windows", "macOS", "Linux",]
license-key = "MIT"
